--- a/index.css
+++ b/index.css
@@ -21,4 +21,29 @@ button {
 }
 
 .title {
+  font-family: sans-serif;
+  letter-spacing: 1.1;
+  font-size: 32px;
+  text-align: center;
+}
+
+.t-class {
+  font-family: sans-serif;
+  letter-spacing: 1.1;
+  font-size: 72px;
+  text-align: center;
+}
+
+.btn-choice {
+  text-transform: none;
+  font-family: sans-serif;
+  letter-spacing: 1.1;
+  font-size: 72px;
+  text-align: center;
+  width: 100px;
+}
+
+.selection-container {
+  display: flex;
+  justify-content: space-evenly;
 }
